<resources>
    <string name="app_name">Android</string>
    <string name="jwtKey">b054ppSjwT</string>
    <string name="title_home">Home</string>
    <string name="title_notes">Notes</string>
    <string name="action_view_notes">View Notes</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="label_title">TItle</string>
    <string name="action_add">Add</string>
    <string name="error_common">Harap coba lagi</string>
    <string name="message_loading">Harap tunggu</string>
    <string name="action_ok">OK</string>
    <string name="action_cancel">Batal</string>
    <string name="error_empty_title">Harap isi judul</string>
    <string name="cd_success">Success</string>
    <string name="message_success">Sukses menambah data</string>
    <string name="action_back">Kembali</string>
    <string name="action_to_main">View Main Page</string>
    <string name="title_activity_register">Registration</string>
    <string name="action_register">Register</string>

    <!--Allowed digits-->
    <string name="digit_input">abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890, .@#$%^*()"':;!?/\|</string>
    <string name="digit_no_separator">abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ123456789 0</string>
    <string name="digit_phone">1234567890</string>
    <string name="digit_account">1234567890</string>
    <string name="digit_nominal">1234567890</string>
    <string name="digit_rate">1234567890.</string>
    <string name="digit_name">abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXY Z</string>
    <string name="digit_email">abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890@._</string>
    <string name="digit_password">abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890!@#$%^&amp;*()`~-_=+[{]}|;:\'"/?.&gt;,&lt;</string>
    <string name="label_phone">Mobile number</string>
    <string name="label_first_name">First name</string>
    <string name="label_last_name">Last name</string>
    <string name="label_dob">Date of Birth</string>
    <string name="label_gender">Gender</string>
    <string name="label_email">Email</string>
    <string name="action_login">Login</string>

    <string name="error_empty_email">Harap isi email</string>
    <string name="error_empty_phone">Harap isi nomor handphone</string>
    <string name="error_invalid_phone">Harap isi nomor handphone yang sesuai</string>
    <string name="error_empty_password">Harap isi password</string>
    <string name="error_invalid_password">Harap isi password yang sesuai</string>
    <string name="error_invalid_email">Harap isi email yang sesuai</string>

    <string-array name="gender_name">
        <item>Laki-laki</item>
        <item>Perempuan</item>
    </string-array>
    <string-array name="gender_value">
        <item>1</item>
        <item>2</item>
    </string-array>
</resources>
